--- a/src/TextInput/TextInput.less
+++ b/src/TextInput/TextInput.less
@@ -80,9 +80,9 @@
   }
 
   &.TextInput--readonly {
-    color: #191926;
+    color: @neutral_dark_gray;
     background: rgba(255,255,255,0.5);
-    border: 1px solid rgba(226,230,235,0.5);
+    border: 1px solid transparent;
   }
 
   textarea:focus, input:focus{
