--- a/src/less/index.less
+++ b/src/less/index.less
@@ -2,6 +2,7 @@
 // Version 0.6.2
 
 // Common constant, class and mixin definitions
+@import "./animations.less";
 @import "./border.less";
 @import "./border_radius.less";
 @import "./colors.less";
