--- a/src/less/index.less
+++ b/src/less/index.less
@@ -1,31 +1,5 @@
 // Clever Styles
-// Version 0.6.2
+// Version 0.17.3
 
-// Common constant, class and mixin definitions
-@import "./border.less";
-@import "./border_radius.less";
-@import "./colors.less";
-@import "./flex.less";
-@import "./fonts.less";
-@import "./grid.less";
-@import "./sizing.less";
-@import "./spacing.less";
-@import "./type-size.less";
-@import "./type-utilities.less";
-@import "./z-index.less";
-
-// Component Modules
-@import "../Button/Button";
-@import "../ConfirmationButton/ConfirmationButton";
-@import "../SegmentedControl/SegmentedControl";
-@import "../TextInput/TextInput";
-@import "../CopyableInput/CopyableInput";
-@import "../Modal/Modal";
-@import "../Select/Select";
-
-@import "../Table/Table";
-@import "../Table/HeaderCell";
-@import "../Table/Cell";
-@import "../Table/Footer";
-@import "../Icon/Icon";
-@import "../LeftNav/LeftNav";
+@import "./utilities";
+@import "./components";
