--- a/src/less/animations.less
+++ b/src/less/animations.less
@@ -9,6 +9,13 @@
 @timingPromptly: 200ms;
 @timingSlowly: 400ms;
 
+// timing function variables
+@motionBounce: cubic-bezier(0.710, -0.360, 0.225, 1.375);
+@motionSmooth: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+@motionSnappy: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+@motionLinear: cubic-bezier(0.250, 0.250, 0.750, 0.750);
+@motionWindUp: cubic-bezier(1.000, -0.530, 0.405, 1.425);
+
 .timingInstantly {
   transition-duration: @timingInstantly;
 }
@@ -29,38 +36,31 @@
   transition-duration: @timingSlowly
 }
 
-.animated {
-  animation-fill-mode: both;
+.delayNone {
+  transition-delay: @timingInstantly;
 }
 
-.expand {
-  animation-name: expand;
-  transition-propery: width;
-  .timingPromptly;
+.delayMoment {
+  transition-delay: @timingImmediately;
+}
+
+.delayShort {
+  transition-delay: @timingQuickly;
+}
+
+.delayMedium{
+  transition-delay: @timingPromptly;
+}
+
+.delayLong {
+  transition-delay: @timingSlowly;
+}
+
+.transition-timing-function(@function) {
+  transition-timing-function: @function;
 }
 
 .changeWidth(@width, @timing) { 
   animation-name: changeWidth;
   transition: @width @timingPromptly;
-}
-
-@keyframes expand {
-  from, 20%, 53%, 80%, to {
-    animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
-    transform: translate3d(0,0,0);
-  }
-
-  40%, 43% {
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    transform: translate3d(0, -30px, 0);
-  }
-
-  70% {
-    animation-timing-function: cubic-bezier(0.755, 0.050, 0.855, 0.060);
-    transform: translate3d(0, -15px, 0);
-  }
-
-  90% {
-    transform: translate3d(0,-4px,0);
-  }
 }
