--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -1,6 +1,7 @@
 // Clever common LESS utiltiies
 
 // Common constant, class and mixin definitions
+@import "./animations";
 @import "./border";
 @import "./border_radius";
 @import "./colors";
