--- a/src/LeftNav/LeftNav.less
+++ b/src/LeftNav/LeftNav.less
@@ -8,21 +8,12 @@
 }
 
 .LeftNav--topnav,
-.LeftNav--subnav,
-.LeftNav--collapsed {
-  .expand;
-  overflow: hidden;
-}
-
-.LeftNav--topnav,
 .LeftNav--subnav {
+  .animateWidth;
   .list-reset;
+  overflow: hidden;
   width: 12rem;
   .border--right--s(@neutral_silver)
-}
-
-.LeftNav--topnav {
-  .zIndex--1; // Ensure the shadow goes over the subnav
 }
 
 .LeftNav--subnav {
@@ -47,7 +38,10 @@
 }
 
 .NavLink--label {
+  .animateOpacity;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  opacity: 1;
 }
 
 .LeftNav--subnav .NavLink {
@@ -56,6 +50,7 @@
 }
 
 .NavLink--selected {
+  .text--semi-bold;
   .tint(background, @primary_blue, 6.15);
   .shade(color, @primary_blue, 3);
 }
@@ -100,13 +95,19 @@
   }
 
   .NavLink--label {
-    display: none;
+    opacity: 0;
   }
 }
 
-
-.expand {
+.animateWidth {
   .timingSlowly;
   .transition-timing-function(@motionSmooth);
   transition-propery: width;
+}
+
+.animateOpacity {
+  .delayMoment;
+  .timingPromptly;
+  .transition-timing-function(@motionSnappy);
+  transition-property: opacity;
 }
