flex.less: add flex--nowrap utility class

--- a/src/less/flex.less
+++ b/src/less/flex.less
@@ -261,6 +261,7 @@
 .flexbox--inline { .inlineFlexbox() }
 .flex--direction--column { .flexDirection(column) }
 .flex--wrap { .flexWrap(wrap) }
+.flex--nowrap { .flexWrap(nowrap) }
 
 .flex--grow { .flexGrow(1) }
 .flex--none { .flexNone() }
