--- a/FlexExample.less
+++ b/FlexExample.less
@@ -2,8 +2,6 @@
 
 
 .FlexExample {
-  .margin--top--2xl;
-
   h2 {
     .margin--top--l;
   }
@@ -24,7 +22,7 @@
 }
 
 .FlexExample--box--minWidth {
-  min-width: 25rem;
+  // min-width: 25rem;
 }
 
 .FlexExample--box--tiny {
