LeftNav: override underline of links on hover

--- a/src/LeftNav/LeftNav.less
+++ b/src/LeftNav/LeftNav.less
@@ -82,6 +82,7 @@
 .NavLink:hover {
   box-shadow: inset @borderWidthL 0 @primary_blue; // blue bar on left
   .zIndex--2; // For subnav links, ensure this goes over the shadow from the topnav
+  text-decoration: none;
 }
 
 .NavGroup--open,
