--- a/src/CopyableInput/CopyableInput.less
+++ b/src/CopyableInput/CopyableInput.less
@@ -1,29 +1,34 @@
 @import (reference) "../less/colors";
 @import (reference) "../less/border";
+@import (reference) "../less/sizing";
+@import (reference) "../less/flex";
+@import (reference) "../less/type-size";
 
 .CopyableInput {
   .border--s(@neutral_silver);
-  display: flex;
+  .flexbox();
   background: @neutral_white;
   width: 100%;
 
   .TextInput {
     border: none;
-    flex: 1 0;
+    .flexShrink(1);
   }
 }
 
 .CopyableInput--links {
-  margin: auto 7px;
+  margin: auto @size_s;
   white-space: nowrap;
   background: white;
+  .flexShrink(0);
 
   .CopyableInput--link {
     border: 0;
     background: none;
-    color: #4274F6;
-    font-size: 12px;
-    border-right: 1px solid #dddddd;
+    color: @primary_blue;
+    font-size: @type_small;
+    .border--right--s(@neutral_silver);
+    .shade(border-right-color, @neutral_silver, 1);
 
     &:last-child {
       border: 0;
