--- a/src/less/flex.less
+++ b/src/less/flex.less
@@ -292,6 +292,9 @@
 .content--start { .alignContent(flex-start) }
 .content--stretch { .alignContent(stretch) }
 
+.display--block { display: block; }
+.display--inline-block { display: inline-block; }
+
 /* 1. Fix for Chrome 44 bug. https://code.google.com/p/chromium/issues/detail?id=506893 */
 .flex--auto {
   .flex(1, 1, auto);
