adding a monospace font to type utilities

--- a/src/less/type-utilities.less
+++ b/src/less/type-utilities.less
@@ -36,8 +36,16 @@
    font-style: normal;
 }
 
+.text--monospace {
+  font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
+}
+
 .text--caps {
   text-transform: uppercase;
+}
+
+.text--lowercase {
+  text-transform: lowercase;;
 }
 
 .text--left { text-align: left }
