--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -8,24 +8,25 @@
 .Wizard--sidebar {
   .flex(0, 0, 15rem);
   width: 15rem;
-  .padding--m;
+  .padding--x--m;
+  .padding--y--l;
   background-color: @neutral_off_white;
   .border--right--m(@neutral_silver);
 
   h2 {
     .text--regular;
+    .padding--none;
+    .margin--bottom--m;
   }
 }
 
+@content_width: 37.5rem;
+@help_min_width: 18.75rem;
 .Wizard--contentGroup {
-  min-width: 37.5rem;
-  max-width: 37.5rem;
-  .padding--s;
+  min-width: @content_width;
+  max-width: @content_width;
+  .margin--bottom--s;
   .margin--left--none;
-
-  &.Wizard--WizardStep--help {
-    min-width: 18.75rem;
-  }
 }
 
 .Wizard--navButtons {
@@ -53,6 +54,7 @@
 .Wizard--stepsDisplay {
   list-style-type: none;
   .padding--none;
+  .margin--top--m;
 
   li {
     &:not(:last-child)::after {
@@ -66,7 +68,7 @@
 }
 
 .Wizard--controls {
-  .margin--top--l;
+  .margin--top--3xl;
 }
 
 .Wizard--stepsDisplay--stepButton.Button {
@@ -111,24 +113,28 @@
 .Wizard--stepsDisplay--icon {
   display: inline-block;
   .flexShrink(0);
-  width: 1.5rem;
-  height: 1.5rem;
+  width: @size_l;
+  height: @size_l;
   background-image: url("../../assets/images/progress_notStarted.svg");
   background-repeat: no-repeat;
   background-size: contain;
   .margin--right--2xs;
 }
 
-.Wizard--WizardStep--componentWrapper {
+.Wizard--WizardStep--component {
+  .flex(1, 0, 37.5rem);
+  .margin--bottom--2xl;
+}
+
+.Wizard--WizardStep--topInfo {
   .flexbox();
   .flexWrap(wrap);
   .alignItems(flex-start);
-}
-
-.Wizard--WizardStep--component {
-  .flex(1, 0, 37.5rem);
+  .margin--top--l;
+  .margin--bottom--m;
 }
 
 .Wizard--WizardStep--help {
-  .flex(1, 0, 18.75rem);
+  min-width: @help_min_width;
+  .flex(1, 0, @help_min_width);
 }
