forgot to add margin

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -26,6 +26,7 @@
   min-width: @content_width;
   max-width: @content_width;
   .margin--bottom--s;
+  .margin--right--m;
   .margin--left--none;
 }
 
