change help padding

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -23,10 +23,10 @@
 @content_width: 37.5rem;
 @help_min_width: 18.75rem;
 .Wizard--contentGroup {
+  .margin--right--4xl;
   min-width: @content_width;
   max-width: @content_width;
   .margin--bottom--s;
-  .margin--right--m;
   .margin--left--none;
 }
 
