Content and pages for sizing docs

--- a/src/less/sizing.less
+++ b/src/less/sizing.less
@@ -6,6 +6,7 @@
  */
 
 @size_none: 0rem;  /* 0px */
+@size_4xs: .0625rem; /* 1px */
 @size_3xs: .125rem;  /* 2px */
 @size_2xs: .25rem;  /* 4px */
 @size_xs: .5rem;  /* 8px */
