--- a/docs/components/Example/CodeSample.less
+++ b/docs/components/Example/CodeSample.less
@@ -8,12 +8,12 @@
 .Demo--CodeSample--content {
   .border--s(@neutral_silver);
   .borderRadius--bottom--m;
+  .text--monospace;
   .text--small;
   background-color: @neutral_off_white;
   border-top: 0;
   box-shadow: inset 0 @size_xs @size_xs -@size_xs fadeout(@neutral_black, 85%);
   display: block;
-  font-family: Menlo, Monaco, Consolas, Courier New, monospace;
   line-height: 1.5;
   margin: 0;
   padding: @size_xl;
