creating a display.less file

--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -5,6 +5,7 @@
 @import "./border";
 @import "./border_radius";
 @import "./colors";
+@import "./display";
 @import "./flex";
 @import "./fonts";
 @import "./grid";
