Make sure button-like anchor controls have explicit block display styles

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -26,6 +26,7 @@ a, button {
     border-bottom-width: @borderWidthL;
     box-sizing: border-box;
     cursor: pointer;
+    display: inline-block;
     font-family: "Proxima Nova";
     font-weight: 600;
     text-decoration: none;
@@ -124,7 +125,7 @@ a, button {
 
   /* Match surroundings even more. */
   &.Button--plain {
-    color: inherit;  
+    color: inherit;
     font-weight: inherit;
     text-align: inherit;
   }
