--- a/src/TabBar/Tab.less
+++ b/src/TabBar/Tab.less
@@ -10,6 +10,7 @@
   box-sizing: border-box;
   color: @neutral_dark_gray;
   cursor: pointer;
+  display: inline-block;
   font-family: inherit;
   font-size: inherit;
   text-decoration: none;
