--- a/src/TabBar/Tab.less
+++ b/src/TabBar/Tab.less
@@ -14,7 +14,12 @@
   font-family: inherit;
   font-size: inherit;
   text-decoration: none;
-  transition: background-color 0.25s ease-out, border-color 0.25s ease-out, color 0.25s ease-out;
+  transition:
+    background-color .25s ease-out,
+    border-color .25s ease-out,
+    color .25s ease-out,
+    margin .25s ease-out,
+    padding .25s ease-out;
 
   &:active,
   &:focus,
