--- a/src/TabBar/TabBar.less
+++ b/src/TabBar/TabBar.less
@@ -2,6 +2,10 @@
 @import (reference) "../less/index";
 
 
+.TabBar {
+  transition: font-size .25s ease-out, box-shadow .25s ease-out;
+}
+
 .TabBar--small {
   .text--small;
   box-shadow: inset 0 -@tabBorderWidthSmall @neutral_silver;
