Fix wizard seek jitter

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -74,6 +74,8 @@
 
 .Wizard--stepsDisplay--stepButton.Button {
   .padding--none;
+  text-align: left;
+  .text--line-height-3;
 }
 
 .Wizard--stepsDisplay--step {
