cut off header text in modals

--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -36,12 +36,15 @@
 
   h2{
     padding: 0;
-    margin: 0;
+    margin: 0 15px 0 0; /* 15px for close button on right */
     font-size: 22px;
     line-height: 30px;
     font-weight: 500;
     color: #121212;
     font-family: "Proxima Nova", Arial, sans-serif;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
