--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -36,7 +36,7 @@
 
   h2 {
     padding: 0;
-    margin: 0 20px 0 0; /* 15px for close button on right */
+    margin: 0 20px 0 0; /* for close button on right */
     font-size: 22px;
     line-height: 30px;
     font-weight: 500;
