Remove TextArea--input left border

--- a/src/TextArea/TextArea.less
+++ b/src/TextArea/TextArea.less
@@ -44,6 +44,7 @@
   display: block;
   width: 100%;
   .border--s(transparent);
+  border-left: @size_none;
   .text--line-height-3;
   .padding--top--l;
   padding-left: @size_4xs;
