--- a/src/TextArea/TextArea.less
+++ b/src/TextArea/TextArea.less
@@ -41,7 +41,15 @@
   display: block;
   width: 100%;
   .border--s(transparent);
+
+  /**
+   * Use a transparent border to position the TextArea input instead of padding or a margin because
+   *  1. Text is still visible in the padding region.
+   *  2. The underlying textarea element overwrites margin values when the user adjusts the
+   *     element's height.
+   */
   border-top-width: @size_l;
+
   .text--line-height-3;
   padding: @size_none;
   background-color: transparent;
