Remove left padding from Select multi values

--- a/src/Select/Select.less
+++ b/src/Select/Select.less
@@ -56,6 +56,7 @@
       .Select-value {
         .margin--top--2xs;
         .margin--left--2xs;
+        padding: @size_none;
         border-color: @neutral_silver;
         color: @neutral_black;
         line-height: @size_m;
