More Label docs.

--- a/docs/components/LabelView.less
+++ b/docs/components/LabelView.less
@@ -8,6 +8,8 @@
 .LabelView--example {
   .margin--none;
   .margin--bottom--s;
+  .text--regular;
+  color: @neutral_dark_gray;
   line-height: 3rem;
 }
 
