--- a/docs/components/Layout.less
+++ b/docs/components/Layout.less
@@ -56,7 +56,9 @@ h6 { &:extend(.text--tiny); }
 
 p {
   .text--line-height-4;
+  margin-top: 0;
   max-width: 35em;
+
   &:last-child {
     margin-bottom: 0;
   }
