design sit with mischelle on tables

--- a/src/Table/Cell.less
+++ b/src/Table/Cell.less
@@ -1,5 +1,7 @@
+@import "../less/sizing.less";
+
 .Table--cell {
-  padding: 20px 10px;
+  padding: @size_m 10px;
 
   &:first-child {
     padding-left: 20px;
