--- a/src/Table/Footer.less
+++ b/src/Table/Footer.less
@@ -1,14 +1,15 @@
 @import "../less/colors.less";
+@import "../less/sizing.less";
 
 @pageNumberMargin: 0 5px;
 
 .Table--footer {
-  background-color: @neutral_silver;
+  background-color: @neutral_off_white;
 }
 
 .Table--footer--cell {
-  font-size: 0.75rem;
-  padding: 0.75rem;
+  font-size: @size_s;
+  padding: @size_s;
   text-align: center;
 }
 
