--- a/src/Table/HeaderCell.less
+++ b/src/Table/HeaderCell.less
@@ -1,13 +1,12 @@
 @import "../less/colors.less";
-
+@import "../less/sizing.less";
 
 .Table--header--cell {
   background-color: @neutral_off_white;
-  border-bottom: 3px solid @neutral_silver;
+  border-bottom: @size_4xs solid @neutral_silver;
   color: @neutral_black;
   font-size: 1rem;
   font-weight: 600;
-  padding-bottom: 14px;
 }
 
 .Table--header--cell--sortable {
