--- a/src/Table/Table.less
+++ b/src/Table/Table.less
@@ -23,7 +23,7 @@
 .Table--body {
   .Table--row {
     border-bottom: @size_4xs solid @neutral_silver;
-    &.rowClickEnabled:hover {
+    &.Table--clickable_row:hover {
       .tint(background-color, @neutral_silver, 5);
       cursor: pointer;
     }
