--- a/docs/components/View.less
+++ b/docs/components/View.less
@@ -21,3 +21,14 @@
 .View--content {
   padding: @size_xl @size_xl @size_5xl;
 }
+
+.View--sourceIcon {
+  .text--bold;
+  .text--medium;
+}
+
+.Button.View--sourceLink {
+  .margin--left--xs;
+  color: @neutral_gray;
+  vertical-align: super;
+}
