--- a/components/Example/CodeSample.less
+++ b/components/Example/CodeSample.less
@@ -6,6 +6,7 @@
 }
 
 .Demo--CodeSample--content {
+  max-width: 60rem;
   .border--s(@neutral_silver);
   .borderRadius--bottom--m;
   .text--monospace;
