TextArea: display "optional" input note

--- a/src/TextArea/TextArea.less
+++ b/src/TextArea/TextArea.less
@@ -30,6 +30,12 @@
   right: @size_l;
 }
 
+.TextArea--optional {
+  position: absolute;
+  right: @size_l;
+  color: @neutral_dark_gray;
+}
+
 .TextArea--error {
   color: @alert_red;
   position: absolute;
