update secondary border color and dropdown border to be full height

--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -75,8 +75,8 @@ a, button {
   }
 
   &.Button--secondary {
+    .tint(border-color, @primary_blue, 2);
     background-color: @neutral_off_white;
-    border-color: @primary_blue;
     color: @primary_blue;
 
     &:hover,
