--- a/src/Modal/Modal.less
+++ b/src/Modal/Modal.less
@@ -1,4 +1,4 @@
-@import "../less/fonts.less";
+@import (reference) "../less/index.less";
 
 .Modal {
   position: fixed;
@@ -33,6 +33,7 @@
   height: 60px;
   padding: 15px 30px;
   box-sizing: border-box;
+  position: relative;
 
   h2 {
     padding: 0;
@@ -52,17 +53,17 @@
   display: block;
   position: absolute;
   cursor: pointer;
-  height: 12px;
-  width: 12px;
-  background: url(./close.png);
-  background-size: 12px 12px;
-  right: 32px;
-  top: 24px;
+  height: @size_m;
+  width: @size_m;
+  background: none;
+  right: @size_l;
   outline: none;
   border: none;
   padding: 0;
   margin: 0;
   opacity: 0.4;
+  top: 50%;
+  margin-top: -(@size_m/2);
 
   &:hover {
     opacity: 0.8;
