--- a/src/Table/Cell.less
+++ b/src/Table/Cell.less
@@ -1,14 +1,15 @@
-@import "../less/sizing.less";
+@import (reference) "../less/utilities.less";
 
 .Table--cell {
-  padding: @size_m 10px;
+  .padding--x--m;
+  .padding--y--s;
 
   &:first-child {
-    padding-left: 20px;
+	.padding--left--m;
   }
 
   &:last-child {
-    padding-right: 20px;
+    .padding--right--m;
   }
 }
 
