--- a/src/DatePicker/DatePicker.less
+++ b/src/DatePicker/DatePicker.less
@@ -2,37 +2,10 @@
 @import "~react-datepicker/dist/react-datepicker.min.css";
 
 .DatePicker {
-  .margin--top--2xs;
-  .zIndex--2;
+  .borderRadius--0;
   .border--s(@neutral_silver);
   background-color: @neutral_off_white;
-  position: absolute;
-}
-
-.DatePicker--Header {
-  .padding--xs;
-  .border--bottom--s(@neutral_silver);
-  color: @neutral_dark_gray;
-}
-
-.DatePicker--Title {
-  .text--small;
-  .text--semi-bold;
-}
-
-.DatePicker--Close {
-  .text--small;
-  cursor: pointer;
-}
-
-.DatePicker--DateInput {
-  .padding--x--xs;
-
-  .react-datepicker {
-    border: none;
-    background: none;
-    font-family: inherit;
-  }
+  font-family: inherit;
 
   .react-datepicker__current-month {
     color: @neutral_black;
@@ -63,7 +36,7 @@
     .text--regular;
   }
 
-  .react-datepicker__day:hover {
+  .react-datepicker__day--keyboard-selected, .react-datepicker__day:hover {
     .shade(background-color, @neutral_off_white, 1);
     border-radius: 50%;
   }
@@ -83,5 +56,9 @@
 
   .react-datepicker__day--disabled {
     color: @neutral_silver;
+  }
+
+  .react-datepicker__triangle {
+    display: none;
   }
 }
