--- a/src/Button/Button.less
+++ b/src/Button/Button.less
@@ -34,6 +34,7 @@ a, button {
     font-weight: 600;
     text-decoration: none;
     transition: all 0.25s ease-out;
+    white-space: nowrap;
 
     &[disabled],
     &[disabled]:hover,
