Wizard: Fix for IE10.

--- a/src/Wizard/Wizard.less
+++ b/src/Wizard/Wizard.less
@@ -20,6 +20,10 @@
   }
 }
 
+.Wizard--stepsDisplay--stepTitle {
+  -ms-flex: 0 1 auto;
+}
+
 @content_width: 37.5rem;
 @help_min_width: 18.75rem;
 .Wizard--contentGroup {
