--- a/src/Icon/Icon.less
+++ b/src/Icon/Icon.less
@@ -3,7 +3,9 @@
 
 .Icon {
   display: inline-block;
+  transition: height @timingPromptly ease-out, width @timingPromptly ease-out;
   vertical-align: middle;
+
   img {
   	width: 100%;
   	height: 100%;
