--- a/src/less/utilities.less
+++ b/src/less/utilities.less
@@ -9,6 +9,7 @@
 @import "./flex";
 @import "./fonts";
 @import "./grid";
+@import "./resets";
 @import "./sizing";
 @import "./spacing";
 @import "./type-size";
