--- a/docs/components/Layout.less
+++ b/docs/components/Layout.less
@@ -8,7 +8,6 @@
 
 body {
   .flexbox;
-  .flex--direction--column;
   .text--medium;
   .text--line-height-3;
   color: @neutral_black;
@@ -20,13 +19,20 @@ body {
   width: 100%;
 }
 
-/* stylelint-disable-next-line selector-no-id */
-#__MAIN__ {
+.Dewey--docs {
   .flexbox;
-  .flex--direction--column;
   .flex--grow;
   min-height: 100vh;
   width: 100%;
+}
+
+.Layout {
+  min-height: 100vh;
+}
+
+.Layout--sideBar {
+  .flexShrink(0);
+  height: auto;
 }
 
 .Layout--mainContainer {
