--- a/src/Icon/Icon.less
+++ b/src/Icon/Icon.less
@@ -6,7 +6,7 @@
   transition: height @timingPromptly ease-out, width @timingPromptly ease-out;
   vertical-align: middle;
 
-  img {
+  & > svg {
   	width: 100%;
   	height: 100%;
   }
