Fix textarea fonts

--- a/src/TextArea/TextArea.less
+++ b/src/TextArea/TextArea.less
@@ -61,6 +61,7 @@
   outline: none;
   resize: vertical;
   box-sizing: border-box;
+  font-family: "Proxima Nova";
 }
 
 &.TextArea--placeholder-shown {
